--- a/app/app.css
+++ b/app/app.css
@@ -25,7 +25,7 @@
 }
 
 .is-active {
-  background-color: #3273dc;
+  background-color: #5CB85C;
   color: #fff;
 }
 
@@ -34,6 +34,5 @@
 }
 
 .dropdown-item:hover {
-  background-color: #6f8fc2;
-  color: #fff
+  background-color: #aeddae;
 }
